--- a/src/app/product/create-product/create-product.component.html
+++ b/src/app/product/create-product/create-product.component.html
@@ -1,6 +1,10 @@
 <form>
   <table class="table-active">
     <tr>
+      <th>Id</th>
+      <td><input type="text" name="id" [(ngModel)]="product.id"></td>
+    </tr>
+    <tr>
       <th>Name</th>
       <td><input type="text" name="name" [(ngModel)]="product.name"></td>
     </tr>
