--- a/src/app/product/list-product/list-product.component.html
+++ b/src/app/product/list-product/list-product.component.html
@@ -17,14 +17,14 @@
     <td>{{x.name}}</td>
     <td>{{x.price}}</td>
     <td>{{x.description}}</td>
-    <td><a class="btn btn-success" (click)="onEdit()">edit</a></td>
-    <td></td>
+    <td><a class="btn btn-success" (click)="onEdit(i)">edit</a></td>
+    <td><a class="btn btn-danger" (click)="deleteProduct(products[i])">delete</a></td>
   </tr>
   <tr>
     <td colspan="6" *ngIf="isCheck"><app-create-product (newProduct)="addItem($event)"></app-create-product></td>
   </tr>
   <tr>
-    <td colspan="6" *ngIf="isUpdate"><app-update-product [currentProduct]="currentItem"></app-update-product></td>
+    <td colspan="6" *ngIf="isUpdate"><app-update-product [product]="products[productCurrentIndex]"></app-update-product></td>
   </tr>
   </tbody>
 </table>
